[#13721] Combine feedback comment output DTOs (#13996)
Co-authored-by: Copilot <copilot@github.com>